--- a/src/app/components/bookstore/bookstore.component.html
+++ b/src/app/components/bookstore/bookstore.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col">
+    <div class="row">
         <app-filters></app-filters>
     </div>
-    <div class="col">
+    <div class="row">
         <app-product-list></app-product-list>
     </div>
 </div>
